Hiding seasonal-focus on smaller screens, fix after reviews

--- a/style.css
+++ b/style.css
@@ -479,6 +479,10 @@ footer ul {
     .recipe-links {
         display: none;
     }
+
+    .seasonal-focus {
+        display: none;
+    }
 }
 
 @media (min-width: 769px) {
